Refuse to Load Corrupted Signed File

--- a/tests/index.html
+++ b/tests/index.html
@@ -46,7 +46,7 @@ nY0HEeaDHR2D8y1tvxAAT6YPyR8TItqRb9oiFmf4hZfGHYwY
         <script>
             (function (pubkey) {
                 srs.load(pubkey, 'http://localhost:8080/tests/valid-sig-test.js.asc');
-                srs.load(pubkey, 'http://localhost:8080/tests/invalid-sig-test.js');
+                srs.load(pubkey, 'http://localhost:8080/tests/invalid-sig-test.js.asc');
             }(document.getElementsByName('pubkey').item(0).content));
         </script>
     </body>
