Using strictly relative references (still needs to be over HTTP but allows you to host this anywhere).

--- a/tests/index.html
+++ b/tests/index.html
@@ -45,8 +45,8 @@ nY0HEeaDHR2D8y1tvxAAT6YPyR8TItqRb9oiFmf4hZfGHYwY
         <h1>Test Subresource Signing!</h1>
         <script>
             (function (pubkey) {
-                srs.load(pubkey, 'http://localhost:8080/tests/valid-sig-test.js.asc');
-                srs.load(pubkey, 'http://localhost:8080/tests/invalid-sig-test.js.asc');
+                srs.load(pubkey, 'valid-sig-test.js.asc');
+                srs.load(pubkey, 'invalid-sig-test.js.asc');
             }(document.getElementsByName('pubkey').item(0).content));
         </script>
     </body>
