--- a/tests/index.html
+++ b/tests/index.html
@@ -46,12 +46,15 @@
         <h1>Test Subresource Signing!</h1>
         <script>
             (function (pubkey) {
+                function yay(data) {
+                    console.log(data.url, data.gpg)
+                }
                 function whoops(err) {
                     console.error("Error validating signed resorce: " + err)
                 }
 
-                srs.load(pubkey, 'valid-sig-test.js.asc').catch(whoops);
-                srs.load(pubkey, 'invalid-sig-test.js.asc').catch(whoops);
+                srs.load(pubkey, 'valid-sig-test.js.asc').then(yay).catch(whoops);
+                srs.load(pubkey, 'invalid-sig-test.js.asc').then(yay).catch(whoops);
             }(pubkey.innerHTML.replace(/\n +/g, '\n')));
         </script>
     </body>
