Note to users to use console to see test results.

--- a/tests/index.html
+++ b/tests/index.html
@@ -46,6 +46,7 @@
     </head>
     <body>
         <h1>Test Subresource Signing!</h1>
+        <p>Open your console and refresh the page to see test results.</p>
         <script>
             (function (pubkey) {
                 function yay(data) {
